--- a/html/index.html
+++ b/html/index.html
@@ -78,10 +78,15 @@
 
             <div class="col-md-9 border_gray" style="display:block;" id="issue1">
                 <div class="row">
-                  <div class="col-md-2 bor-btm bor-right clr-green text-center pt-2 pb-2">
-                    Issue 1
+                  <div class="col-md-3 bor-btm bor-right text-center pt-2 pb-2">
+                    <div class="clr-green" style="font-size: 1.3em;">
+                      Issue 1
+                    </div>
+                    <div class="text-black" style="font-size: 0.75em;">
+                      June 6th, 2018
+                    </div>
                   </div>
-                    <div class="col-md-10 bor-left text-center d-flex justify-content-center bor-btm pt-2 pb-2">
+                    <div class="col-md-9 bor-left text-center d-flex justify-content-center bor-btm pt-2 pb-2">
                         Several learners exited the exploration in less than a minute.
                     </div>
                 </div>
@@ -155,10 +160,15 @@
 
                 <div class="col-md-9 border_gray" style="display:none;" id ="issue2">
                     <div class="row">
-                      <div class="col-md-2 bor-btm bor-right clr-green text-center pt-2 pb-2">
-                        Issue 2
+                      <div class="col-md-3 bor-btm bor-right text-center pt-2 pb-2">
+                        <div class="clr-green" style="font-size: 1.3em;">
+                          Issue 2
+                        </div>
+                        <div class="text-black" style="font-size: 0.75em;">
+                          October 6th, 2018
+                        </div>
                       </div>
-                        <div class="col-md-10 bor-left text-center d-flex justify-content-center bor-btm pt-2 pb-2">
+                        <div class="col-md-9 bor-left text-center d-flex justify-content-center bor-btm pt-2 pb-2">
                             Several learners ended up in a cyclic loop revisiting card "state" many times.
                         </div>
                     </div>
@@ -253,10 +263,15 @@
 
             <div class="col-md-9 border_gray" style="display:none;" id="issue3">
                 <div class="row">
-                  <div class="col-md-2 bor-btm bor-right clr-green text-center pt-2 pb-2">
-                    Issue 3
+                  <div class="col-md-3 bor-btm bor-right text-center pt-2 pb-2">
+                    <div class="clr-green" style="font-size: 1.3em;">
+                      Issue 3
+                    </div>
+                    <div class="text-black" style="font-size: 0.75em;">
+                      July 6th, 2018
+                    </div>
                   </div>
-                    <div class="col-md-10 bor-left text-center d-flex justify-content-center bor-btm pt-2 pb-2">
+                    <div class="col-md-9 bor-left text-center d-flex justify-content-center bor-btm pt-2 pb-2">
                         Several learners submitted answers to card "state2" several times, then gave up and quit.
                     </div>
                 </div>
