--- a/html/index.html
+++ b/html/index.html
@@ -78,11 +78,11 @@
 
             <div class="col-md-9 border_gray" style="display:block;" id="issue1">
                 <div class="row">
-                  <div class="col-md-3 bor-btm bor-right text-center pt-2 pb-2">
-                    <div class="clr-green" style="font-size: 1.3em;">
+                  <div class="col-md-3 bor-btm bor-right text-center pt-2 pb-2 bg-clr text-white">
+                    <div class="" style="font-size: 1.3em;">
                       Issue 1
                     </div>
-                    <div class="text-black" style="font-size: 0.75em;">
+                    <div class="" style="font-size: 0.75em;">
                       June 6th, 2018
                     </div>
                   </div>
@@ -160,11 +160,11 @@
 
                 <div class="col-md-9 border_gray" style="display:none;" id ="issue2">
                     <div class="row">
-                      <div class="col-md-3 bor-btm bor-right text-center pt-2 pb-2">
-                        <div class="clr-green" style="font-size: 1.3em;">
+                      <div class="col-md-3 bor-btm bor-right text-center pt-2 pb-2 bg-clr text-white">
+                        <div class="" style="font-size: 1.3em;">
                           Issue 2
                         </div>
-                        <div class="text-black" style="font-size: 0.75em;">
+                        <div class="" style="font-size: 0.75em;">
                           July 6th, 2018
                         </div>
                       </div>
@@ -263,11 +263,11 @@
 
             <div class="col-md-9 border_gray" style="display:none;" id="issue3">
                 <div class="row">
-                  <div class="col-md-3 bor-btm bor-right text-center pt-2 pb-2">
-                    <div class="clr-green" style="font-size: 1.3em;">
+                  <div class="col-md-3 bor-btm bor-right text-center pt-2 pb-2 bg-clr text-white">
+                    <div class="" style="font-size: 1.3em;">
                       Issue 3
                     </div>
-                    <div class="text-black" style="font-size: 0.75em;">
+                    <div class="" style="font-size: 0.75em;">
                       October 6th, 2018
                     </div>
                   </div>
